# aoc-2025

./: .gitattributes  .gitignore  LICENSE  pyproject.toml
src/aoc2025/: main.py
src/aoc2025/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
