[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2025"
description = "Advent of Code 2025 solutions"
authors = [{ name = "Nuri Jung", email = "jnooree@snu.ac.kr" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "typer>=0.20.0",
]
dynamic = ["version"]

[project.scripts]
aoc2025 = "aoc2025.main:app"

[tool.setuptools_scm]
